--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -1,4 +1,7 @@
 {
    "login": "تسجيل الدخول",
-   "loginSubTitle" : "الرجاء تسجيل الدخول للمتابعة"
+   "loginSubTitle" : "الرجاء تسجيل الدخول للمتابعة",
+   "Username" : "إسم المستخدم",
+   "Password" : "كلمة المرور",
+   "Signin" : "تسجيل الدخول"
 }
