--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -4,6 +4,13 @@
    "loginSubTitle" : "Please Sign in to continue",
    "Username" : "Username",
    "Password" : "Password",
-   "Signin" : "Sign in"
+   "Signin" : "Sign in",
+   "oldPassword" : "Old Password",
+   "newPassword" : "New Password",
+   "confirmNewPassword" : "Confirm New Password",
+   "save" : "Save",
+   "createNewPassword" : "Create New Password",
+   "yourNewPasswordMustBeDifferent" : "Your New Password Must Be Different",
+   "fromPreviouslyUsedPassword" : "From Previously Used Password."
 
 }
