--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -15,5 +15,16 @@
    "events" : "فعاليات",
    "news" : "الأخبار",
    "payment" : "الدفع",
-   "you" : "أنت"
+   "you" : "أنت",
+   "viewAll" : "عرض المزيد",
+   "sports" : "الأنشطة الرياضية",
+   "football" : "كرة القدم",
+   "basketball" : "كرة السلة",
+   "crossfit" : "لياقة بدنية",
+   "boxing" : "ملاكمة",
+   "running" : "رياضة الجري",
+   "tennisball" : "كرة التنس",
+   "tantaclub" : "نادي طنطة"
+
+
 }
