add events and news

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -24,7 +24,8 @@
    "boxing" : "ملاكمة",
    "running" : "رياضة الجري",
    "tennisball" : "كرة التنس",
-   "tantaclub" : "نادي طنطة"
+   "tantaclub" : "نادي طنطة",
+   "boxingTitle" : "كيف تكون الملاكمة مفيدة لك"
 
 
 }
