--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -25,7 +25,8 @@
    "boxing" : "Boxing",
    "running" : "Running",
    "tennisball" : "TennisBall",
-   "tantaclub" :"Tanta Club"
+   "tantaclub" :"Tanta Club",
+   "boxingTitle" : "How Is Boxing Good For You"
 
 
 }
