--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -24,8 +24,8 @@
    "boxing" : "ملاكمة",
    "running" : "رياضة الجري",
    "tennisball" : "كرة التنس",
-   "tantaclub" : "نادي طنطة",
-   "boxingTitle" : "كيف تكون الملاكمة مفيدة لك"
-
+   "userProfile" : "صفحتك الشخصية",
+   "tantaclub" : "نادي طنطة"
+   
 
 }
